# a365-foundry

./: .env  .gitignore  AGENTS.md  README.md  azure.yaml
.agents/skills/azure-brand-deck/: SKILL.md  make_assets.py  palette.md  patterns.md
.agents/skills/azure-foundry-image-generation/: .env.example  .gitignore  SKILL.md
.agents/skills/azure-foundry-image-generation/scripts/: generate_images.py
.github/workflows/: deploy.yml
docs/: PRD-Foundry-Agent-in-M365-Copilot.md
infra/: bot.bicep  containerapp.bicep  foundry-rbac.bicep  identity.bicep  main.bicep
src/: m365agents.yml
src/.fx/configs/: projectSettings.json
src/agent-host/: .env.example  Dockerfile  README.md  pyproject.toml
src/agent-host/app/: __init__.py  agent_handler.py  config.py  foundry_client.py  m365_adapter.py  main.py  streaming.py
src/agent-host/app/auth/: __init__.py  bot_auth.py  obo_token_service.py
src/agent-host/tests/: test_agent_handler.py  test_config.py  test_foundry_client.py  test_m365_adapter.py  test_main.py
src/appPackage/: manifest.json
src/env/: .env.example
