[project]
name = "a365-foundry-agent-host"
version = "0.1.0"
description = "Microsoft 365 custom engine agent host proxying an Azure AI Foundry agent."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "azure-identity>=1.25.0",
    "fastapi>=0.124.0",
    "msal>=1.34.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "uvicorn[standard]>=0.38.0",
    "microsoft-agents-activity>=0.1.0",
    "microsoft-agents-authentication-msal>=0.1.0",
    "microsoft-agents-hosting-core>=0.1.0",
    "azure-ai-projects>=2.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
